<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/customer_cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="12dp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_textView"
            style="@style/black22medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/customer_info"
            android:textSize="22sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/phoneNumber_cardView"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="@color/gray_light"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneNumber_textField"
                style="@style/Base.TextField.Custom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/text_field"
                android:hint="@string/phone_number"
                app:placeholderTextColor="@color/gray_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneNumber_editText"
                    style="@style/value"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@null"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/email_cardView"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="@color/gray_light"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_textField"
                style="@style/Base.TextField.Custom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/text_field"
                android:hint="@string/email"
                app:placeholderTextColor="@color/gray_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_editText"
                    style="@style/value"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@null"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/comment_textView"
            style="@style/gray14regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/customer_info_comment" />

    </LinearLayout>

</androidx.cardview.widget.CardView>